# linux-enable-ir-emitter

./: .clang-tidy  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  build_opencv.sh  cleaner  config.txt  config.yaml  data-seq-to-hex.py  enable-ir-emitter.c  enable-ir-emitter.service  find-config-ir-emitter.py  fix_SELinux.sh  globals.py  installer.sh  linux-enable-ir-emitter  linux-enable-ir-emitter.cpp.in  linux-enable-ir-emitter.py  linux-enable-ir-emitter.service  meson.build  meson_options.txt  test.cpp
.cargo/: config.toml
.githooks/: pre-commit
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  configuration-has-failed.md  does-not-work-at-boot.md  feature_request.md  feature_request.yml  help_bug.yml
.github/bot_comment/: ci_fail.md  ci_success.md
.github/comment/: failed_build.md  success_build.md
AUR/: .SRCINFO  PKGBUILD
COPR/: linux-enable-ir-emitter.spec
PPA/: changelog  control  install  postinst  postinstall  postrm  rules  watch
arch/: PKGBUILD
auto/: EIE-tool  auto-config.py  capture.py
autocomplete/: linux-enable-ir-emitter  linux-enable-ir-emitter.bash  linux-enable-ir-emitter.zsh
boot_service/: base_boot_service.py
camera/: autocamera.cpp  autocamera.hpp  camera.cpp  camera.hpp  camerainstruction.cpp  camerainstruction.hpp  is-emitter-working.cpp  is-gray-camera.cpp  opencv.hpp  video-feedback.cpp
command/: __init__.py  boot.py  commands.hpp  configure.cpp  configure.py  delete.cpp  load_cpp_commands.py  run.cpp  test.cpp  test.py  tweak.cpp
configuration/: configuration.hpp  finder.cpp  finder.hpp  scanner.cpp  scanner.hpp  tweaker.cpp  tweaker.hpp
deb/: changelog  postinst
docs/: README.md  configurations.md  exit-code.md  issues.md  manual-build.md  requirements.md  uninstallation.md
driver/: driver.cpp  driver.hpp  finder.cpp  finder.hpp
manual/: data-seq-to-hex.py  enable-ir-emitter.c
package/: Makefile  config.json  enable-ir-emitter@.service  find-config-ir-emitter.py  install.bash  linux-enable-ir-emitter  linux-enable-ir-emitter.service
rpm/: linux-enable-ir-emitter.spec
software/: CMakeLists.txt  enable-ir-emitter.py
software/src/: main.cpp
software/src/widget/home/: Con_Home.cpp  Con_Home.hpp  Ui_Home.h  home.ui
sources/: Driver.py  DriverGenerator.py  DriverSerializer.py  IrConfigCapture.py  IrConfiguration.py  IrConfigurationSerializer.py  Makefile  Systemd.py  command.py  config.yaml  enable-ir-emitter  enable-ir-emitter-template.c  exit.py  globals.py  globals.py.in  linux-enable-ir-emitter.py  linux-enable-ir-emitter.service  migrate-v3.py
sources/boot_service/openrc/: meson.build  openrc.py
src/: configuration.rs  configure.rs  ir.rs  lib.rs  linux-enable-ir-emitter.cpp.in  logger.rs  main.rs  meson.build  run.rs  tools.rs  utils.rs  uvc.rs  video.rs
src/camera/: autocamera.cpp  autocamera.hpp  camera.cpp  camera.hpp  camerainstruction.cpp  camerainstruction.hpp
src/command/: commands.hpp  configure.cpp  run.cpp  test.cpp  tweak.cpp
src/config/: configuration.rs
src/configuration/: configuration.cpp  configuration.cpp.in  configuration.hpp  finder.cpp  finder.hpp  scanner.cpp  scanner.hpp  tools.hpp  tweaker.cpp  tweaker.hpp
src/configure/: app.rs  ui.rs
src/configure/app/: helper.rs  ir_enabler.rs  tool_menu.rs  tweaker.rs
src/configure/snapshots/: linux_enable_ir_emitter__configure__ui__tests__render_keys.snap
src/configure/ui/: helper.rs  ir_enabler.rs  shared.rs  tool_menu.rs  tweaker.rs
src/configure/ui/snapshots/: linux_enable_ir_emitter__configure__ui__helper__tests__popup_area_snapshot.snap  linux_enable_ir_emitter__configure__ui__ir_enabler__tests__main_empty.snap  linux_enable_ir_emitter__configure__ui__ir_enabler__tests__main_with_abort_prompt.snap  linux_enable_ir_emitter__configure__ui__ir_enabler__tests__main_with_controls.snap  linux_enable_ir_emitter__configure__ui__ir_enabler__tests__main_with_image.snap  linux_enable_ir_emitter__configure__ui__ir_enabler__tests__main_with_question.snap  linux_enable_ir_emitter__configure__ui__ir_enabler__tests__menu_empty.snap  linux_enable_ir_emitter__configure__ui__ir_enabler__tests__menu_strart.snap  linux_enable_ir_emitter__configure__ui__ir_enabler__tests__menu_valid_values.snap  linux_enable_ir_emitter__configure__ui__ir_enabler__tests__render_menu_strart.snap  linux_enable_ir_emitter__configure__ui__shared__tests__render_main_window.snap  linux_enable_ir_emitter__configure__ui__shared__tests__render_video_preview.snap  linux_enable_ir_emitter__configure__ui__shared__tests__render_video_preview_empty.snap  linux_enable_ir_emitter__configure__ui__tool_menu__tests__tool_menu_enabler_selected.snap  linux_enable_ir_emitter__configure__ui__tool_menu__tests__tool_menu_tweaker_selected.snap  linux_enable_ir_emitter__configure__ui__tweaker__tests__main_empty.snap  linux_enable_ir_emitter__configure__ui__tweaker__tests__main_with_abort_prompt.snap  linux_enable_ir_emitter__configure__ui__tweaker__tests__main_with_controls.snap  linux_enable_ir_emitter__configure__ui__tweaker__tests__main_with_image.snap  linux_enable_ir_emitter__configure__ui__tweaker__tests__main_with_question.snap  linux_enable_ir_emitter__configure__ui__tweaker__tests__menu_empty.snap  linux_enable_ir_emitter__configure__ui__tweaker__tests__menu_valid_values.snap
src/ir/: camera.rs  control.rs  stream.rs
src/kernel/: Makefile  dkms.conf  linux-enable-ir-emitter.c
src/tools/: configurator.rs
src/utils/: _logger.hpp.in  configuration.cpp  configuration.hpp.in  logger.hpp  logger.hpp.in  logger.rs  window.rs
src/utils/window/: frame.rs  winit_app.rs
src/uvc/: control.rs  device.rs  xucontroldescription.rs
src/video/: ir.rs  stream.rs  uvc.rs
src/video/ir/: analyzer.rs  enabler.rs
src/video/uvc/: device.rs  xucontrol.rs
tests/: camerainstruction.test.cpp  meson.build
utils/: __init__.py  argparse.hpp  configuration.cpp  configuration.hpp  configuration.hpp.in  globals.cpp  globals.hpp.in  globals.py  logger.cpp  logger.hpp  opencv.hpp  serializer.cpp  serializer.hpp  yaml.hpp
(+102 files in other folders)
