[package]
name = "linux-enable-ir-emitter"
version = "7.0.0"
edition = "2024"
authors = ["Maxime Dirksen (EmixamPP)"]
license = "MIT"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4.7"
derive_more = { version = "2.0.1", features = ["error", "add_assign", "mul"] }
log = "0.4"
log4rs = "1.3"
ron = "0.10.1"
rustix = { version = "1.0", default-features = false, features = ["std", "fs"] }
serde = { version = "1.0.219", features = ["derive"] }
softbuffer = "0.4.6"
v4l = "0.14.0"
winit = "0.30.10"
