[package]
name = "linux-enable-ir-emitter"
version = "7.0.0-beta2"
edition = "2024"
authors = ["Maxime Dirksen (EmixamPP)"]
license = "MIT"

[dependencies]
ansi-to-tui = "8.0.1"
ansipix = { git = "https://github.com/EmixamPP/ansipix.git", rev = "4e29437ea3fc23ea451a50b90cafdf7c519ffacb" }
anyhow = "1.0.100"
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
derive_more = { version = "2.1.1", features = ["from", "into", "as_ref"] }
futures = "0.3.31"
glob = "0.3.3"
image = { version = "0.25.9", default-features = false, features = [
    "rayon",
    "png",
] }
log = "0.4"
ratatui = { version = "0.30.0" }
rustix = { version = "1.1", default-features = false, features = ["std", "fs"] }
serde = { version = "1.0.228", features = ["derive"] }
shellexpand = "3.1.1"
simplelog = { version = "0.12.2" }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "sync"] }
toml = "0.9.11"
v4l = "0.14.0"

[dev-dependencies]
insta = "1.46.2"
rand = "0.9.2"
rand_chacha = "0.9.0"
serial_test = "3.3.1"
